fix(table): #CO-1552 prevent overflow text subject table

--- a/src/main/resources/public/css/additional.css
+++ b/src/main/resources/public/css/additional.css
@@ -13,6 +13,13 @@
 .centered {
     text-align: center;
 }
+
+/* table component */
+.list-view-subject {
+    width: 500px;
+    display: flex
+}
+
 /* attachment component */
 .support-attachment .found-resources {
     height: unset!important;
